feat: update title and add analytics script to index.html; enhance user profile management in App.vue and new profile store
- Changed the title in index.html to "Cyber AI" for branding consistency.
- Added an analytics script for tracking user interactions on the application.
- Updated App.vue to utilize the new profile store for fetching user profiles and improved login handling.
- Introduced a new profile store to manage user profile data, including fetching and updating profiles.
- Enhanced chat message subscription logic to utilize the new profile store for better performance and clarity.
- Refactored workspace and assistant management to streamline avatar handling and improve user experience.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    <%= productName %> - 全功能、轻量级的 AI 客户端
+    <%= productName %> - Cyber AI
   </title>
 
   <meta charset="utf-8">
@@ -22,5 +22,9 @@
 <body>
   <!-- quasar:entry-point -->
 </body>
+<!-- analytics -->
+<script defer data-domain="app.chatcyber.ai"
+  src="https://stats.chatcyber.ai/js/script.file-downloads.hash.outbound-links.pageview-props.tagged-events.js"></script>
+<script>window.plausible = window.plausible || function () { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
 </html>
